# evraz_ht2

./: .gitignore  README.md  docker-compose.yml  rebuild-restart.sh
.extras/: schema.csv  schema.json
backend/: .dockerignore  Dockerfile  entrypoint.sh  pom.xml
data_prediction_service/: Dockerfile  README.md  requirements.txt
data_prediction_service/data_prediction_service/: collector.py  consumer.py  data.py  main.py  tracer.py  ws_prediction_server.py
data_prediction_service/data_prediction_service/config/: .~lock.signals_mapping_u171.csv#  config.yaml  signals_mapping_f171.csv  signals_mapping_f172.csv  signals_mapping_u171.csv  signals_mapping_u172.csv  signals_mapping_x171.csv  u171_data.csv  u171_data01.csv  u171_data2.csv  u171_data_fft.csv  u171_data_fft2.csv  u171_data_fft3.csv
frontend/: .env  .eslintrc  Dockerfile  craco.config.js  docker-compose.yaml  package.json  tsconfig.paths.json
frontend/src/: index.tsx
frontend/src/components/: App.tsx
frontend/src/hooks/: redux.ts  useDynamicSVGImport.ts  useNotif.tsx  useWebSocket.ts
frontend/src/reduxToolkit/: index.ts
frontend/src/scss/: _normalize.scss  _reset.scss  _settings.scss  _typography.scss  index.scss
frontend/src/services/: constants.ts  mappers.ts  mapping.ts  mock.ts  subscriptions.ts  types.ts  utils.ts
frontend/src/webSocketClient/: client.ts
metrics/: Dockerfile  config.go  go.mod  go.sum  kafka.go  main.go  model.go  prometheus.go  schema.go  yandex_kafka_client.go
metrics/prometheus/: prometheus.yml
schema/: create_schema.py  pyproject.toml
(+227 files in other folders)
