[tool.poetry]
name = "schema"
version = "0.1.0"
description = ""
authors = ["vladt <trocenko.vlad@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
openpyxl = "^3.1.1"
regex-spm = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
